--- a/AZ_Quiz/data/rules.html
+++ b/AZ_Quiz/data/rules.html
@@ -5,15 +5,16 @@
   </head>
   <body>
     	<h1>Pravidla hry AZ Kvíz:</h1>
-   	<p> 1) Cílem hry je pomocí správných odpovědí(=to jest žetony vlastní barvy) propojit 3 strany herního plánu.
-    	<p> 2) V módu pro 2 hráče určuje o začínajícím počítač a to náhodným losem.
-    	<p> 3) Hráč má 5 vteřin na zakliknutí=zvolení pole a následně 1 minutu na odpověď.
+   	<p> 1) Cílem hry je pomocí správných odpovědí(=to jest hexagony vlastní barvy) propojit 3 strany herního plánu.
+    	<p> 2) V PVP módu určuje začínajícího hráče počítač a to náhodným losem.
+    	<p> 3) Hráč má po zvolení pole 20 vteřin na zodpovězení otázky.
     	<p> 4) Odpověď musí být zadána ve správném tvaru, v češtině, s diaktitikou a gramaticky správně. Jen jeden tvar je správný a bude uznán.
-    	<p> 5) V případě, že soutěžící uzná, že odpověď neví nebo mu vyprší časový limit na odpověď, dostává možnost odpovědět jeho soupeř.
-    	<p> 6) Pokud na otázku správně neodpoví ani jeden ze soutěžících, zbarví se pole na černé.
-    	<p> 7) V případě, že ani jeden ze soutěžících nedosáhne cíle hry do doby časového limitu hry, vyhrává soutěžící s vyšším počtem správně zodpovězených otázek.
-    	<p> 8) Časový limit jedné hry je 20 minut.
-    	<p> 9) Při správném zodpovězení otázky soutěžícím, pokračuje ve vybírání dalšího pole soupeř.
-    	<p> 10) Hra končí po uplynutí časové limitu nebo splněním cíle.
+    	<p> 5) V případě, že soutěžící uzná, že odpověď neví a vyprší mu časový limit na odpověď, dostává možnost odpovědi jeho soupeř.
+    	<p> 6) Pokud na otázku správně neodpoví ani jeden z hráčů, zbarví se pole na černé.
+    	<p> 7) V případě, že ani jeden z hráčů nedosáhne cíle hry do konce časového limitu, vyhrává soutěžící s vyšším skóre.
+	<p> 8) Skóre je počítáno následujícím způsobem: správná odpověď + 10 bodů, chybná/nezodpovězení -3 body.
+    	<p> 9) Časový limit jedné hry v režimu PVP je 15 minut.
+    	<p> 10) Při správném zodpovězení otázky soutěžícím, pokračuje ve vybírání dalšího pole soupeř.
+    	<p> 11) Hra končí po uplynutí časové limitu nebo splněním cíle.
   </body>
 </html>
